update nodemon package

--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
-  },
+    "start": "npm run dev",
+    "dev": "nodemon server.js"
+  }
+  ,
   "author": "moustafa elgazayrli",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^3.0.3"
   },
   "keywords": [],
-  "description": "",
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  }
+  "description": ""
 }
